<resources>

    <string name="app_name">MyInventoryApp</string>
    <string name="action_delete_all_entries">Delete All Inventory</string>
    <string name="editor_activity_title_new_item">Add an Item</string>
    <string name="editor_activity_title_edit_item">Edit an Item</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="category_overview">Overview</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_price">Price</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_phone_number">XXX-XXX-XXXXX</string>
    <string name="add_item_button">Add Item</string>
    <string name="add_item_editor">Add a new Item</string>
    <string name="edit_item_editor">Edit this Item</string>
    <string name="list_product_name">List Product Name</string>
    <string name="list_quantity">List Quantity</string>
    <string name="list_price">List Price</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="empty_view_title_text">It\'s a bit lonely here…</string>
    <string name="empty_view_subtitle_text">Let\'s Get Started! Add an Item!!! :D </string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="editor_delete_item_successful">Item deleted</string>
    <string name="editor_delete_item_failed">Error with deleting Item</string>
    <string name="editor_insert_item_successful">Item saved</string>
    <string name="editor_insert_item_failed">Error with saving Item</string>
    <string name="editor_update_item_successful">Item updated</string>
    <string name="editor_update_item_failed">Error with updating Item</string>
    <string name="error_item_name">Enter a valid item name</string>
    <string name="error_price">Enter a valid price</string>
    <string name="error_quantity">Enter a valid quantity</string>
    <string name="error_supplier_name">Enter a valid supplier name </string>
    <string name="error_supplier_phone">Enter a valid supplier phone number</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="error_saving">Error saving product</string>
    <string name="product_saved">Product saved successfully</string>
    <string name="save_error">Error saving Product</string>
    <string name="prod_saved_id">Product saved with row id:</string>
    <string name="sale_button">Sell Item</string>
    <string name="dollar_sign">$</string>
    <string name="quantity">Total Count: </string>
    <string name="error_sale_message">There was an error making your sale</string>
    <string name="successful_sale_message">Currently processing your sale</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="add_order">Order</string>
    <string name="clear_order">Clear</string>

</resources>
